--- a/src/styles/branding.scss
+++ b/src/styles/branding.scss
@@ -26,3 +26,6 @@ $monospace: 'Fira Mono', monospace;
         content: "";
     }
 }
+@include headings-all-selector(".white") {
+    color: $white;
+}
