--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -16,3 +16,15 @@ nav {
         list-style: none;
     }
 }
+
+.flex {
+    display: flex;
+}
+
+.justify-content__center {
+    justify-content: center;
+}
+
+.align-items__center {
+    align-items: center;
+}
