--- a/src/styles/functions.scss
+++ b/src/styles/functions.scss
@@ -1,4 +1,4 @@
-@function repeat($character, $n){
+@function sass-repeat($character, $n){
   $c:"";
   @for $i from 1 through $n {
     $c: $c + $character;
