--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -14,6 +14,15 @@ nav {
         padding: 0;
         display: flex;
         list-style: none;
+        li {
+            a {
+                color: $white;
+                text-decoration: none;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+        }
     }
 }
 
