--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -3,10 +3,19 @@
   // ** Home Content ** //
   &.content__home {
     @include max-width;
+    width: 100%;
     margin: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    h1 {
+      margin: 10px 0;
+    }
+    p {
+      text-align: center;
+      font-size: 1rem;
+      margin: 10px 0;
+    }
   }
 }
