--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,23 @@
 * {
     font-family: $monospace;
     color: $white;
+    font-size: 16px;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.8em;
+}
+
+h3 {
+    font-size: 1.75em;
+}
+
+h4 {
+    font-size: 1.5em;
 }
 
 body {
