--- a/src/styles/_social-icons.scss
+++ b/src/styles/_social-icons.scss
@@ -1,6 +1,16 @@
 .social-icons {
   width: 100%;
+  height: 50px;
+  max-height: 50px;
   max-width: 500px;
-  font-size: 1.75rem;
+  align-items: center;
   justify-content: space-around;
+  .social-icon {
+    font-size: 1.8rem;
+    // height: 75%;
+    // transition: font-size .25s;
+    // &:hover {
+    //   font-size: 2rem;
+    // }
+  }
 }
