--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -32,5 +32,9 @@
     #footer {
       grid-area: footer;
     }
+
+    // @media only screen and (min-width: 800px) {
+    //   grid-template-areas: "nav  content  content  content""nav  skip       .       .""nav  content content content""nav  footer  footer  footer";
+    // }
   }
 }
