--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -5,6 +5,7 @@
     @include max-width;
     width: 100%;
     margin: 20px;
+    padding: 10px;
     .content--wrapper__home {
       display: flex;
       flex-direction: column;
@@ -16,19 +17,28 @@
       }
       h1 {
         margin: 15px 0;
-        font-size: 2.2em;
+        font-size: 2rem;
       }
       p {
         text-align: center;
-        font-size: 1.25rem;
+        font-size: 1rem;
         margin: 15px 0;
       }
 
-      @media only screen and (min-width: 1200px){
+      @media only screen and (min-width: 400px) {
+        h1 {
+          font-size: 2.2rem;
+        }
+        p {
+          font-size: 1.25rem;
+        }
+      }
+
+      @media only screen and (min-height: 850px){
         transform: scale(1.35);
       }
 
-      @media only screen and (min-width: 1500px){
+      @media only screen and (min-height: 950px){
         transform: scale(1.5);
       }
     }
