--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,7 @@
 @import 'branding';
 @import '_base';
 @import '_layout';
+@import '_reachUI';
 @import '_navigation';
 @import '_content';
 @import '_footer';
