--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -6,6 +6,9 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    .nav--logo {
+        display: none;
+    }
     ul {
         @include max-width;
         width: 100%;
@@ -24,7 +27,21 @@
                 .nav-item--icon {
                     font-size: 1rem;
                 }
-                @media only screen and (min-width: 800px) {
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 800px) {
+    #main-nav {
+        flex-direction: column;
+        .nav--logo {
+            display: block;
+            margin: 20px;
+        }
+        ul {
+            li {
+                a {
                     .nav-item--icon {
                         font-size: 1.75rem;
                         margin: 10px;
