--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -18,11 +18,16 @@
         li {
             a {
                 .nav-item--content {
+                    color: transparentize($color: $white, $amount: .15);
+                    @include transition();
                     font-size: 1.25rem;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
                     align-items: center;
+                    @include hover-focus() {
+                        color: $white;
+                    }
                 }
                 .nav-item--icon {
                     font-size: 1rem;
