--- a/src/styles/_social-icons.scss
+++ b/src/styles/_social-icons.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .social-icons {
   width: 100%;
   height: 50px;
@@ -6,11 +8,19 @@
   align-items: center;
   justify-content: space-around;
   .social-icon {
+    @include transition();
+    color: transparentize($white, .15);
     font-size: 1.8rem;
     // height: 75%;
     // transition: font-size .25s;
-    // &:hover {
+    // @include hover-focus() {
     //   font-size: 2rem;
     // }
+    @include hover-focus() {
+      &.social-icon__twitter { color: $blue}
+      &.social-icon__twitch { color: $purple}
+      &.social-icon__github { color: $white}
+      &.social-icon__youtube { color: $red}
+    }
   }
 }
