--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -2,9 +2,7 @@
 #content {
   // ** Home Content ** //
   &.content__home {
-    @include max-width;
-    margin: 20px;
-    padding: 10px;
+    @include content;
     .content--wrapper__home {
       display: flex;
       flex-direction: column;
@@ -26,7 +24,7 @@
 
       @media only screen and (min-width: 400px) {
         h1 {
-          font-size: 2.2rem;
+          font-size: 2.5rem;
         }
         p {
           font-size: 1.25rem;
@@ -39,6 +37,38 @@
 
       @media only screen and (min-height: 950px){
         transform: scale(1.5);
+      }
+    }
+  }
+  &.content__about {
+    @include content;
+    height: 100%;
+    .content--wrapper__about {
+      // Grid Fall Back
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+
+      display: grid;
+      align-items: center;
+      justify-content: center;
+      grid-template-columns: 1fr;
+      grid-template-rows: 100px 1fr auto;
+      grid-gap: 20px;
+      >* {
+        margin: 0 auto;
+      }
+
+      .text {
+        max-width: 700px;
+        text-align: center;
+      }
+
+      @media only screen and (min-width: 800px) {
+        .text{
+          text-align: left;
+        }
       }
     }
   }
