--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -65,9 +65,17 @@
         text-align: center;
       }
 
+      .kaitlin{
+        margin: 10px auto;
+        width: 200px;
+        img, picture {
+          @include circle();
+        }
+      }
+
       @media only screen and (min-width: 800px) {
         .text{
-          text-align: left;
+          // text-align: left;
         }
       }
     }
