--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,9 +1,14 @@
 @import 'mixins';
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: $monospace;
     color: $white;
     font-size: 16px;
+    line-height: 1.5;
     margin: 0;
     background: $main-bg;
 }
